--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "sass": "^1.34.1",
     "sass-loader": "^10.0.0",
+    "v-pagination-3": "^0.1.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8"
   },
